--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "node-red-contrib-play-audio-file",
   "version": "0.0.1",
   "description": "Play an audio file",
-  "icon": "unmute.png",
   "dependencies": {
     "soundplayer": "*"
   },
@@ -24,8 +23,7 @@
   },
   "maintainers": [
     {
-      "name": "leanbi",
-      "email": "sebastien.brennion@leanbi.ch"
+      "name": "leanbi"
     }
-  ],
+  ]
 }
